--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: contact-microservices
+  name: contactmicroservices
   labels:
-    name: contact-microservices
-    app.kubernetes.io/name: contact-microservices
+    name: contactmicroservices
+    app.kubernetes.io/name: contactmicroservices
     app.kubernetes.io/version: "1.0.0"
     app.kubernetes.io/component: namespace
     app.kubernetes.io/part-of: contact-system
