--- a/k8s/rabbitmq.yaml
+++ b/k8s/rabbitmq.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app: rabbitmq
     app.kubernetes.io/name: rabbitmq
