--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: contact-secrets
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app.kubernetes.io/name: contact-secrets
     app.kubernetes.io/version: "1.0.0"
