--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,13 +34,13 @@ jobs:
       matrix:
         include:
           - service: ContactCreate.API
-            service_slug: create-contact
+            service_slug: contact-create-api
           - service: ContactRead.API
-            service_slug: read-contact
+            service_slug: contact-read-api
           - service: ContactUpdate.API
-            service_slug: update-contact
+            service_slug: contact-update-api
           - service: ContactDelete.API
-            service_slug: delete-contact
+            service_slug: contact-delete-api
     
     steps:
     - uses: actions/checkout@v3
