--- a/k8s/contact-update-api.yaml
+++ b/k8s/contact-update-api.yaml
@@ -125,7 +125,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: contact-update-api-service
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app: contact-update-api
     app.kubernetes.io/name: contact-update-api-service
