--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: contact-microservices-ingress
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app.kubernetes.io/name: contact-microservices-ingress
     app.kubernetes.io/version: "1.0.0"
@@ -66,7 +66,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rabbitmq-management-ingress
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app.kubernetes.io/name: rabbitmq-management-ingress
     app.kubernetes.io/version: "1.0.0"
