--- a/k8s/rabbitmq.yaml
+++ b/k8s/rabbitmq.yaml
@@ -85,7 +85,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq-service
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app: rabbitmq
     app.kubernetes.io/name: rabbitmq-service
@@ -114,7 +114,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq-management-service
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app: rabbitmq
     app.kubernetes.io/name: rabbitmq-management-service
@@ -139,7 +139,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: rabbitmq-pvc
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app: rabbitmq
     app.kubernetes.io/name: rabbitmq-pvc
