--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: sqlserver-secrets
-  namespace: contact-microservices
+  namespace: contactmicroservices
   labels:
     app.kubernetes.io/name: sqlserver-secrets
     app.kubernetes.io/version: "1.0.0"
